[package]
name = "rrr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
hex = "0.4.3"
indicatif = "0.17.8"
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
sha2 = "0.10.8"
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
